refactoring ticktet micro and adding new ticket client
