# Backend/Ticketing.Ticket/src/Ticketing.Ticket.API/Endpoints/UserEndpoints.cs
@@ -1,38 +1,0 @@
-﻿using MediatR;
-using Microsoft.AspNetCore.Mvc;
-using Ticketing.Ticket.Application.Dtos.Responses;
-using Ticketing.Ticket.Application.Queries.GetUserByName;
-
-namespace Ticketing.Ticket.API.Endpoints;
-
-  public static class UserEndpoints
-  {
-  public static void MapUserEndpoints(this WebApplication app)
-  {
-    app.MapGroup("api/User")
-      .MapUserGetEndpoints();
-  }
-
-  public static RouteGroupBuilder MapUserGetEndpoints(this RouteGroupBuilder group)
-  {
-    group.MapGet("/{userName}", GetUserByUserName)
-    .WithName("GetUserByUserName")
-    .Produces<UserResponse>(StatusCodes.Status200OK)
-    .Produces<ProblemDetails>(StatusCodes.Status404NotFound)
-    .Produces<ProblemDetails>(StatusCodes.Status500InternalServerError);
-
-    return group;
-  }
-
-  public static async Task<IResult> GetUserByUserName(
-    string userName,
-    IMediator mediator,
-    CancellationToken cancellationToken)
-  {
-    var query = new GetUserByNameQuery(userName);
-    var result = await mediator.Send(query, cancellationToken);
-
-    return Results.Ok(result);
-  }
-}
-
