# Backend/Ticketing.Ticket/src/Ticketing.Ticket.Application/Queries/GetUserByName/GetUserByNameQueryValidator.cs
@@ -1,11 +1,0 @@
-﻿using FluentValidation;
-
-namespace Ticketing.Ticket.Application.Queries.GetUserByName;
-public class GetUserByNameQueryValidator : AbstractValidator<GetUserByNameQuery>
-{
-  public GetUserByNameQueryValidator()
-  {
-    RuleFor(x => x.UserName)
-        .NotEmpty().WithMessage("User name is required.");
-  }
-}
